--- a/css/footer.css
+++ b/css/footer.css
@@ -17,20 +17,23 @@ body
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     text-transform: uppercase;
-    font-size: 15px;
-    padding: 15px 300px;
+    font-size: 35px;
+    padding: 15px 150px;
     box-sizing: border-box;
 }
-#containerFooter h3:hover, #containerFooter p:hover
+
+#containerFooter h3:hover,p:hover, span:hover, a:hover
 {
     color: lightslategray;
     cursor: pointer;
 }
 #webFooter
 {
-    padding-top: 30px;
+    padding-top: 40px;
     font-size: 12px;
 }
+
+
 #credit 
 {
     width: 100%;
@@ -67,7 +70,7 @@ transition: all .3s cubic-bezier(0.445, 0.05, 0.55, 0.95);
 }
 
 /* ----------------------------- MEDIA QUERY --------------------------- */
-
+/* 
 @media(max-width: 1350px)
 {
     #containerFooter
@@ -119,4 +122,11 @@ transition: all .3s cubic-bezier(0.445, 0.05, 0.55, 0.95);
     {
         padding: 0 25px;
     }
+} */
+
+h1 {
+    color: black;
+}
+p {
+    padding: 5px 0;
 }
