--- a/css/cart.css
+++ b/css/cart.css
@@ -112,3 +112,761 @@ button a:focus
         width: 80%;
     }
 }
+
+body
+{
+    margin: 0;
+}
+#badge
+{
+    position: absolute;
+    background-color: rgb(255, 30, 30);
+    color: white;
+    border-radius: 50%;
+    padding: 5px 8px;
+    font-size: 14px;
+    top: 10px;
+    right:158px;
+}
+
+#container {
+    background-color: #0096C7;
+    margin: auto;
+    text-align: center;
+    width: 100%;
+    display: flex;
+    font-family: 'Lato', sans-serif;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 40px;
+    box-sizing: border-box;
+    /* position: fixed; */
+    box-shadow: 0 1px 2px 0 rgba(60, 64, 67, 0.302), 0 2px 6px 2px rgba(60, 64, 67, 0.149);
+}
+#shopName 
+{
+    font-size: 40px; 
+    font-family: 'Lato', sans-serif;
+    margin-right: -30px;
+    margin-top: 5px;
+}
+#shopName a
+{
+    text-decoration: none;
+    color: rgb(29, 29, 29);
+}
+#shopName > b
+{
+    font-weight: 900;
+    font: black;
+}
+
+#collection
+{
+    font-weight: bold;
+    font-size: 20px;
+    display: flex;
+    /* grid-template-columns: 1fr 1fr; */
+}
+#collection div {
+    margin: 0 20px; /* Adjust margin as needed */
+}
+#collection div {
+    transition: transform 0.3s, color 0.3s; /* Add transition for smooth effect */
+}
+
+#collection div:hover {
+    transform: scale(1.1); /* Increase size on hover */
+    color: #555; /* Darken text color on hover */
+}
+
+
+#collection a {
+    text-decoration: none;
+    color: rgb(29, 29, 29);
+}
+#clothing
+{
+    margin-left: 10px;
+    margin-right: 10px;
+}
+#stationary
+{
+    margin-right: 10px;
+}
+#groceries
+{
+    margin-right: 10px;
+}
+#collection a
+{
+    text-decoration: none;
+    color: rgb(29, 29, 29);
+}
+
+.search
+{
+    padding: 14px;
+    color: rgb(29, 29, 29);
+    min-width: 25px;
+    text-align: center;
+    position: absolute;
+}
+
+.addedToCart
+{
+    font-size: 1.5em;
+    margin-right: 25px;
+}
+
+#user
+{
+    display: flex;
+    /* float: right; */
+    align-items: center;
+}
+.addedToCart,
+.userIcon {
+    font-size: 30px; /* Set the same font size for both icons */
+}
+
+#badge {
+    position: absolute;
+    background-color: #fff;
+    color: #0096C7;
+    border-radius: 50%;
+    padding: 3px 6px; /* Adjust padding for smaller size */
+    font-size: 15px; /* Adjust font size for smaller size */
+    top: 12px; /* Adjust top position to align with the shopping cart icon */
+    margin-right: -13px; /* Adjust right position to align with the shopping cart icon */
+}
+
+
+#input 
+{
+    width: 18em;
+    height: 3em;
+    padding: 2px 50px;
+    background-color: rgb(241, 241, 241);
+    border: none;
+    border-radius: 5px;
+}
+#input::placeholder
+{
+    font-weight: bold;
+}
+#input:focus
+{
+    outline: none;
+}
+#user a
+{
+    color: rgb(29, 29, 29)
+}
+
+/* ----------------------------- MEDIA QUERY --------------------------- */
+
+@media(max-width: 1300px)
+{
+    #collection
+    {
+        font-size: 13px;
+    }
+    #input 
+    {
+        width: 18em;
+    }
+}
+@media(max-width: 1212px)
+{
+    #collection
+    {
+        font-size: 13px;
+    }
+    #input 
+    {
+        width: 20em;
+    }
+    .addedToCart
+    {
+        font-size: 1.5em;
+        margin: 10px 20px;
+    }
+}
+
+@media(max-width: 1090px)
+{
+    #container
+    {
+        display: grid;
+        grid-template-columns: 1fr 2fr 0.5fr;
+    }
+    #search
+    {
+        display: none;
+    }
+}
+@media(max-width: 750px)
+{
+    #shopName
+    {
+        font-size: 28px;
+    }
+    #collection
+    {
+        font-size: 12px;
+    }
+    .userIcon
+    {
+        font-size: 35px;
+    }
+    .addedToCart
+    {
+        font-size: 1.2em;
+        margin: 10px 20px;
+    }
+}
+
+@media(max-width: 650px)
+{
+    #shopName
+    {
+        font-size: 24px;
+    }
+    #collection
+    {
+        font-size: 10px;
+    }
+    .userIcon
+    {
+        font-size: 30px;
+    }
+}
+@media(max-width: 550px)
+{
+    #container 
+    {
+        padding: 20px 25px;
+    }
+}
+
+/* badge media */
+
+@media(max-width: 1480px)
+{
+    #badge
+    {
+        right:150px;
+    }
+}
+@media(max-width: 1426px)
+{
+    #badge
+    {
+        right:142px;
+    }
+}
+@media(max-width: 1360px)
+{
+    #badge
+    {
+        right:136px;
+    }
+}
+@media(max-width: 1320px)
+{
+    #badge
+    {
+        right:129px;
+    }
+}
+@media(max-width: 1259px)
+{
+    #badge
+    {
+        right:119px;
+    }
+}
+@media(max-width: 1212px)
+{
+    #badge
+    {
+        right: 96px;
+    }
+}
+@media(max-width: 1155px)
+{
+    #badge
+    {
+        right: 87px;
+    }
+}
+@media(max-width: 1090px)
+{
+    #badge
+    {
+        right: 119px;
+    }
+}
+@media(max-width: 1030px)
+{
+    #badge
+    {
+        right: 109px;
+    }
+}
+@media(max-width: 970px)
+{
+    #badge
+    {
+        right: 100px;
+    }
+}
+@media(max-width: 910px)
+{
+    #badge
+    {
+        right: 94px;
+    }
+}
+@media(max-width: 850px)
+{
+    #badge
+    {
+        right: 87px;
+    }
+}
+@media(max-width: 750px)
+{
+    #badge
+    {
+        right: 87px;
+        padding: 3px 6px;
+        font-size: 12px;
+        top: 12px;
+    }
+}
+@media(max-width: 650px)
+{
+    #badge
+    {
+        right: 78px;
+    }
+}
+@media(max-width: 550px)
+{
+    #badge
+    {
+        right: 62px;
+        top: 18px;
+    }
+}
+
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+  }
+  
+  html {
+    scroll-behavior: smooth;
+  }
+  
+  body,
+  button,
+  input {
+    font-family: 'Roboto', sans-serif;
+    font-size: .938rem;
+  }
+  
+  body {
+    margin: 0;
+    background-color: hsl(0, 0%, 99%);
+    color: hsl(0, 0%, 35%);
+    /*For animation dark mode*/
+    transition: .4s;
+  }
+  
+  h1, h2, h3, h4 {
+    color: hsl(0, 0%, 35%);
+    font-weight: 500;
+  }
+  /* Sort Options */
+.sort-options {
+    position: absolute;
+    top: 100px;
+    right: 50px;
+    background-color: white;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    z-index: 999;
+}
+.sort-options i {
+    color: #333; /* Change the color */
+    font-size: 18px; /* Change the font size */
+    margin-right: 5px; /* Add some spacing */
+}
+
+.category {
+    padding-top: 80px; /* Adjust this value to match the height of the sort options */
+}
+  
+  ul {
+    list-style: none;
+  }
+  
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+  
+  button {
+    cursor: pointer;
+    border: none;
+    outline: none;
+  }
+  
+  /*================Collection==============*/
+  
+  .containerr {
+    row-gap: 2.5rem;
+    
+  }
+  .collection-card {
+    position: relative;
+    height: 350px;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding-block: 45px 25px;
+  }
+  .collection-card {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
+    padding: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+  }
+  
+  .collection-card h2 {
+    color: white;
+  }
+  
+  .containerr_card {
+    position: relative;
+    height: 20rem;
+  }
+  .containerr { padding-inline: 15px; }
+  
+  .containerr {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: nowrap; 
+  }
+  
+  .conatinerr__card {
+    flex-basis: calc(25% - 10px); 
+  }
+  
+  
+  
+  
+  /*=============== FEATURED ===============*/
+  .featured__container {
+    row-gap: 2.5rem;
+    
+  }
+  
+  .featured__card {
+    position: relative;
+    text-align: center;
+    background-color: #fff;
+    padding-top: 2rem;
+    border: 1px solid hsl(0, 0%, 94%);
+    overflow-y: hidden;
+    transition: .3s;
+  }
+  
+  .featured__tag {
+    background-color: hsl(0, 90%, 50%);
+    padding: .5rem 1rem;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: .813rem;
+    font-weight: 500;
+    position: absolute;
+    transform: rotate(-90deg);
+    left: -1rem;
+    top: 3rem;
+  }
+  
+  .featured__img {
+    height: 214px;
+    margin-bottom: 1rem;
+  }
+  
+  .featured__title, 
+  .featured__price {
+    font-size: 1.25rem;
+    font-weight: 700;
+  }
+  
+  .featured__title {
+    text-transform: uppercase;
+    margin-bottom: .75rem;
+  }
+  
+  .featured__price {
+    display: block;
+    color: black;
+    transition: .3s;
+  }
+  
+  .featured__button {
+    font-size: .813rem;
+    transform: translateY(1rem);
+    opacity: 0;
+  }
+  
+  .featured__card:hover {
+    box-shadow: 0 12px 32px hsla(0, 0%, 20%, .1);
+    padding: 2rem 0 3rem 0;
+  }
+  
+  .featured__card:hover .featured__button {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  
+  .featured__card:hover .featured__price {
+    margin-bottom: 1.5rem;
+  }
+  
+  .featured__container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: nowrap; 
+  }
+  
+  .featured__card {
+    flex-basis: calc(25% - 10px); 
+  }
+  
+  .heading {
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: -50px;
+    font-size: 20px;
+    font-family: sans-serif;
+    color: black;
+}
+
+  
+  /*=============== PRODUCTS ===============*/
+  .products__container {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+  }
+  .products__container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); /* Change the number of columns from 5 to 4 */
+    grid-gap: 10px;
+}
+
+  
+  .products__card {
+    position: relative;
+    background-color: #fff;
+    padding: 1.25rem 0;
+    border: 1px solid hsl(0, 0%, 94%);
+    text-align: center;
+    transition: .3s;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1); 
+  }
+  
+  .products__img {
+    height: 125px;
+    margin-bottom: 1rem;
+  }
+  
+  .products__title, 
+  .products__price {
+    font-size: .813rem;
+    font-weight: 500;
+  }
+  
+  .products__title {
+    text-transform: uppercase;
+    margin-bottom: 0.5rem;
+  }
+  
+  .products__price {
+    color: black;
+  }
+  
+  .products__button {
+    background-color: hsl(0, 0%, 17%);
+    padding: .4rem;
+    color: #fff;
+    font-size: 1rem;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    transition: .3s;
+  }
+  
+  .products__button:hover {
+    background-color: hsl(0, 0%, 21%);
+  }
+  
+  .products__card:hover {
+    box-shadow: 0 8px 32px hsla(0, 0%, 10%, .1);
+  }
+  
+  .featured__button {
+    background-color: black;
+    color: white;
+    width: 150px;
+    height: 50px;
+  }
+  
+  a {
+    text-decoration: none;
+    color: black;
+  }
+body
+{
+    margin: 0;
+    font-family: 'Lato', sans-serif;
+}
+
+#containerFooter
+{
+    width: 100%;
+    background-color: #ecf5f7;
+    color: black;
+    letter-spacing: 1px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    text-transform: uppercase;
+    font-size: 35px;
+    padding: 15px 150px;
+    box-sizing: border-box;
+}
+
+#containerFooter h3:hover,p:hover, span:hover, a:hover
+{
+    color: lightslategray;
+    cursor: pointer;
+}
+#webFooter
+{
+    padding-top: 40px;
+    font-size: 12px;
+}
+
+
+#credit 
+{
+    width: 100%;
+    margin: auto;
+    padding: 20px 0;
+    text-align: center;
+    background-color: rgb(29, 29, 29);
+    color: white;
+    font-size: 11px;
+    letter-spacing: 1px;
+}
+
+#credit a
+{
+    color: white;
+    text-decoration: none;
+    position: relative;
+}
+#credit a::after
+{
+content: "";
+background: white;
+mix-blend-mode: exclusion;
+width: calc(100% + 18px);
+height: 0;
+position: absolute;
+bottom: -4px;
+left: -10px;
+transition: all .3s cubic-bezier(0.445, 0.05, 0.55, 0.95);
+}
+#credit a:hover::after
+{
+    height: calc(100% + 8px)
+}
+
+/* ----------------------------- MEDIA QUERY --------------------------- */
+/* 
+@media(max-width: 1350px)
+{
+    #containerFooter
+    {
+        padding: 15px 200px;
+    }
+}
+@media(max-width: 1166px)
+{
+    #containerFooter
+    {
+        padding: 15px 100px;
+    }
+}
+@media(max-width: 950px)
+{
+    #containerFooter
+    {
+        padding: 15px 50px;
+    }
+}
+@media(max-width: 850px)
+{
+    #containerFooter
+    {
+        font-size: 13px;
+    }
+    #webFooter
+    {
+        font-size: 10px;
+    }
+}
+@media(max-width: 750px)
+{
+    #containerFooter
+    {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding: 15px 100px;
+    }
+    #webFooter
+    {
+        padding: 15px 20px;
+    }
+}
+@media(max-width: 540px)
+{
+    #containerFooter
+    {
+        padding: 0 25px;
+    }
+} */
+
+h1 {
+    color: black;
+}
+p {
+    padding: 5px 0;
+}
